--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-# -  title:  "Publications"
-#    url:   /publications/
+ -  title:  "Publications"
+    url:   /publications/
 
 #  - title:  "Talks"
 #    url: /talks/    
@@ -10,7 +10,7 @@ main:
     url: /cv/
     
   - title: "Research"
-    url: /Research/
+    url: /research/
     
   - title: "Teaching"
     url: /teaching/    
