--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,8 +17,8 @@ main:
     
 
         
-#  - title: "Blog Posts"
-#    url: /year-archive/
+  - title: "Blog Posts"
+    url: /year-archive/
     
 
 
