--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,27 +1,22 @@
 # main links links
 main:
-   - title: "Publications"
-      url: /publications/
+  - title: "Publications"
+    url: /publications/
 
-#  - title:  "Talks"
-#    url: /talks/    
+  - title: "Talks"
+    url: /talks/    
 
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Research"
-    url: /research/
-    
   - title: "Teaching"
     url: /teaching/    
     
-
+  - title: "Portfolio"
+    url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
     
-
-
+  - title: "CV"
+    url: /cv/
     
-#  - title: "Guide"
-#    url: /markdown/
+  - title: "Guide"
+    url: /markdown/
